(arith) Add a REPL executable

--- a/arith/package.yaml
+++ b/arith/package.yaml
@@ -31,6 +31,9 @@ executables:
     dependencies:
     - base
     - arith
+    - parsec
+    - pretty
+    - haskeline
     ghc-options:
     - -rtsopts
     - -threaded
