(untypedlambda) Add a REPL executable

--- a/untypedlambda/package.yaml
+++ b/untypedlambda/package.yaml
@@ -31,6 +31,8 @@ executables:
     dependencies:
     - base
     - untypedlambda
+    - parsec
+    - haskeline
     ghc-options:
     - -rtsopts
     - -threaded
