--- a/arith/package.yaml
+++ b/arith/package.yaml
@@ -52,6 +52,8 @@ tests:
     - tasty
     - tasty-hunit
     - tasty-quickcheck
+    - hedgehog
+    - tasty-hedgehog
     ghc-options:
     - -rtsopts
     - -threaded
